Upgrade to v0.3.3-dev-fix.1

--- a/pyzender.conf
+++ b/pyzender.conf
@@ -6,7 +6,7 @@ queue_lookup_interval = 5
 queue_update_interval = 5
 queue_send_size = 250
 
-[psutil]
+[hwinfo]
 data_interval = 5
 discovery_interval = 10
 
