Fix queue send size limit

--- a/pyzender.conf
+++ b/pyzender.conf
@@ -2,13 +2,15 @@
 hostname = ubuntu
 zabbix_server = 192.168.0.3
 debug_mode = 0
-queue_lookup_interval = 5
-queue_update_interval = 5
-queue_send_size = 250
+queue_lookup_interval = 60
+queue_update_interval = 1
+queue_send_size = 150
+keep_last_items = 1000000
+keep_last_discovery = 100
 
 [hwinfo]
-data_interval = 5
-discovery_interval = 10
+data_interval = 1
+discovery_interval = 60
 
 [health]
 data_interval = 5
