--- a/pyzender.conf
+++ b/pyzender.conf
@@ -1,16 +1,15 @@
 [agent]
 hostname = ubuntu
-zabbix_server = 192.168.0.3
-debug_mode = 0
+zabbix_server_host = 192.168.0.254
+zabbix_server_port = 10051
+zabbix_sender = /usr/bin/zabbix_sender
 queue_lookup_interval = 60
 queue_update_interval = 1
+modules_sync_interval = 60
+debug_mode = 0
 queue_send_size = 150
 keep_last_items = 1000000
 keep_last_discovery = 100
-
-[hwinfo]
-data_interval = 1
-discovery_interval = 60
 
 [health]
 data_interval = 5
