update (package) to v.0.4.2-dev
(global):
- replace printing with logging

(agent.py):
- add (Agent class) uuid attribute for logging purposes and future features
- add (Agent class) queue_max_send_interval attribute to limit the waiting interval between timestamps
- handle (_read_config_file) configparser.Error and ValidationError exceptions
- refactor (_send_data)
- add (_request_active_checks) PyzenderError exception
- refactor (_sync_modules)
- add active_modules method

(modules/agent_stats.py - renamed from modules/health.py):
- add more key to the items

(modules/base.py):
- fix (DataReport, DiscoveryReport) the key attribute

(modules/psutil.py):
- fix (_discover_threads) discovery report

(pyzender.conf):
- add new items
- rename health section to agentstats

(setup.py):
- raise up the version number

(zbx_export_template.yaml):
- upgrade from zabbix 5.4 to 6.4
- add items
- add tags
- add PSUtil dashboard
- add graphs

--- a/pyzender.conf
+++ b/pyzender.conf
@@ -3,13 +3,14 @@ hostname = ubuntu
 zabbix_server_host = 192.168.0.254
 zabbix_server_port = 10051
 zabbix_sender = /usr/bin/zabbix_sender
-queue_lookup_interval = 60
+queue_lookup_interval = 10
 queue_update_interval = 1
+queue_send_size = 150
+queue_max_send_interval = 10
 modules_sync_interval = 60
 debug_mode = 0
-queue_send_size = 150
 keep_last_items = 1000000
 keep_last_discovery = 100
 
-[health]
+[agentstats]
 data_interval = 5
